<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".user_manage.OtpSection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/people"
    android:gravity="center"
    android:alpha="0.9"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otptext"
        android:textColor="#ea4c88"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/phn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="number"
        android:textColor="#ea4c88"
        android:textSize="30sp"
        />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:src="@drawable/feel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/otptype"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/otp_newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/pass"
            android:drawablePadding="10dp"
            android:hint="@string/newpass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <Button
            android:id="@+id/changepassbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ea4c88"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>